--- a/gallery.html
+++ b/gallery.html
@@ -59,5 +59,17 @@
       </div>
     </div>
 
+    <footer>
+      Follow us on
+      <a href="https://www.facebook.com/teaninjausa">
+        <i class="fab fa-facebook-square">Facebook </i>
+      </a>
+      <a href="https://www.instagram.com/teaninja_annarbor/?hl=en">
+        <i class="fab fa-instagram">Instagram </i>
+      </a>
+
+      <p>This website is designed and coded by Jing Cao.</p>
+    </footer>
+
   </body>
 </html>
