--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
     <p>Every drink in Tea Ninja is selected with heart.</p>
     <p>You can find the same drink without toppings in INVISIBILITY.</p>
     <p>Allergic to milk or other stuffs? Find altenative in REPLICATION.</p>
-    <p>Want try something different but not that risky? Try something is the SUBSTITUTION.</p>
+    <p>Want try something different but not that risky? Try something in the SUBSTITUTION.</p>
     <table class="milk-tea">
       <caption></caption>
       <thead>
