--- a/gallery.html
+++ b/gallery.html
@@ -5,67 +5,73 @@
     <title>Gallery - Tea Ninja</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/mystyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Josefin+Sans|Rock+Salt&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c15271769.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="skip"><a href="#main">Skip to Main Content</a></div>
-    <header>
-      <h1>
+    <div class="skip"><a href="#gallery-header">Skip to Main Content</a></div>
+    <header role="banner">
+
+      <nav class="nav" role="navigation">
         <a href="index.html">
-          <img src="images/teaninja_logo_plain.jpg" alt="main logo">
+          <img src="images/teaninja_logo_vertical_1.png" alt="main logo" id="logo">
         </a>
-      </h1>
-      <p class = "slogan">The First Rule of Being a Ninja is Drinking Some Tea…</p>
-      <nav class="nav">
-        <ul>
-          <li><a href="index.html">About</a></li><!--
-          --><li><a href="menu.html">Menu</a></li><!--
-          --><li><a href="gallery.html">Gallery</a></li><!--
-          --><li><a href="location_n_contact.html">Location & Contact</a></li>
+        <ul class="nav-links">
+          <li class="nav-item"><a href="index.html">About</a></li>
+          <li class="nav-item"><a href="menu.html">Menu</a></li>
+          <li class="nav-item active-page"><a href="gallery.html">Gallery</a></li>
+          <li class="nav-item"><a href="location_n_contact.html">Location & Contact</a></li>
         </ul>
       </nav>
+
     </header>
 
-    <h2 id="main gallery-header">Gallery</h2>
+    <main role="main" class="gallery-container">
+      <h1 class = "slogan">
+        The First Rule of Being a Ninja is Drinking Some Tea …
+      </h1>
+      <h2 id="gallery-header">Gallery</h2><br>
 
-    <div class="gallery-row">
-      <div class="gallery-column">
-        <img src="images/teaninja_lakeview_front_door.jpg" alt="front door of teaninja lakeview store">
-        <img src="images/teaninja_lakeview_counter.jpg" alt="counter of teaninja lakeview store">
-        <img src="images/teaninja_lakeview_armchairs.jpg" alt="a corner of teaninja lakeview store">
-        <img src="images/teaninja_lakeview_bar_table.jpg" alt="bar table of teaninja lakeview store">
+  <div class="gallery-row" >
+          <!-- <div class="gallery-column"> -->
+            <img src="images/teaninja_lakeview_front_door.jpg" alt="front door of teaninja lakeview store">
+            <img src="images/teaninja_lakeview_counter.jpg" alt="counter of teaninja lakeview store">
+            <img src="images/teaninja_lakeview_armchairs.jpg" alt="a corner of teaninja lakeview store">
+            <img src="images/teaninja_lakeview_bar_table.jpg" alt="bar table of teaninja lakeview store">
 
-      </div>
+          <!-- </div> -->
 
-      <div class="gallery-column">
-        <img src="images/teaninja_lakeview_inside_view_two.jpg" alt="inside view of teaninja lakeview store">
-        <img src="images/teaninja_decorative_wall_pacman.jpg" alt="pacman decorative wall">
-        <img src="images/teaninja_lakeview_counter_corner.jpg" alt="counter corner of teaninja lakeview store">
-        <img src="images/teaninja_logo_chinese.png" alt="chinese logo">
-      </div>
+          <!-- <div class="gallery-column"> -->
+            <img src="images/teaninja_lakeview_inside_view_two.jpg" alt="inside view of teaninja lakeview store">
+            <img src="images/teaninja_decorative_wall_pacman.jpg" alt="pacman decorative wall">
+            <img src="images/teaninja_lakeview_counter_corner.jpg" alt="counter corner of teaninja lakeview store">
+            <img src="images/teaninja_logo_chinese.png" alt="chinese logo">
+          <!-- </div> -->
 
-      <div class="gallery-column">
-        <img src="images/teaninja_drinks.jpg" alt="all kinds of drinks">
-        <img src="images/teaninja_macaron.jpg" alt="french macaron">
-        <img src="images/teaninja_drink_top_10.jpg" alt="top ten drinks">
-        <img src="images/teaninja_logo_physical.jpg" alt="teaninja logo">
-      </div>
+          <!-- <div class="gallery-column"> -->
+            <img src="images/teaninja_drinks.jpg" alt="all kinds of drinks">
+            <img src="images/teaninja_macaron.jpg" alt="french macaron">
+            <img src="images/teaninja_drink_top_10.jpg" alt="top ten drinks">
+            <img src="images/teaninja_logo_physical.jpg" alt="teaninja logo">
+          <!-- </div> -->
 
-      <div class="gallery-column">
-        <img src="images/teaninja_lakeview_grand_opening_crowd_two.jpg" alt="grand opening of teaninja lakeview store">
-        <img src="images/teaninja_lakeview_grand_opening_thumbup.jpg" alt="thumbup to the grand opening">
-        <img src="images/teaninja_lakeview_staff_smile.jpg" alt="our staff is very happy working in teaninja">
-        <img src="images/teaninja_lakeview_staff.jpg" alt="cool staff">
-      </div>
-    </div>
+          <!-- <div class="gallery-column"> -->
+            <img src="images/teaninja_lakeview_grand_opening_crowd_two.jpg" alt="grand opening of teaninja lakeview store">
+            <img src="images/teaninja_lakeview_grand_opening_thumbup.jpg" alt="thumbup to the grand opening">
+            <img src="images/teaninja_lakeview_staff_smile.jpg" alt="our staff is very happy working in teaninja">
+            <img src="images/teaninja_lakeview_staff.jpg" alt="cool staff">
+          <!-- </div> -->
+</div>
 
-    <footer>
+    </main>
+
+    <footer role="followus">
       Follow us on
       <a href="https://www.facebook.com/teaninjausa">
-        <i class="fab fa-facebook-square">Facebook </i>
+        <i class="fab fa-facebook-square" aria-label="facebook">Facebook </i>
       </a>
       <a href="https://www.instagram.com/teaninja_annarbor/?hl=en">
-        <i class="fab fa-instagram">Instagram </i>
+        <i class="fab fa-instagram" aria-label="instagram">Instagram </i>
       </a>
 
       <p>This website is designed and coded by Jing Cao.</p>
