--- a/index.html
+++ b/index.html
@@ -5,81 +5,94 @@
     <title>Tea Ninja</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/mystyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Josefin+Sans|Rock+Salt&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c15271769.js" crossorigin="anonymous"></script>
   </head>
+
   <body>
-    <header>
-      <div class="skip"><a href="#main">Skip to Main Content</a></div>
-      <h1>
+    <div class="skip"><a href="#intro-1">Skip to Main Content</a></div>
+    <header role="banner">
+
+      <nav class="nav" role="navigation">
         <a href="index.html">
-          <img src="images/teaninja_logo_plain.jpg" alt="main logo">
+          <img src="images/teaninja_logo_vertical_1.png" alt="main logo" id="logo">
         </a>
-      </h1>
-      <p class = "slogan">The First Rule of Being a Ninja is Drinking Some Tea…</p>
-      <nav class="nav">
-        <ul>
-          <li><a href="index.html">About</a></li><!--
-          --><li><a href="menu.html">Menu</a></li><!--
-          --><li><a href="gallery.html">Gallery</a></li><!--
-          --><li><a href="location_n_contact.html">Location & Contact</a></li>
+        <ul class="nav-links">
+          <li class="nav-item active-page"><a href="index.html">About</a></li>
+          <li class="nav-item"><a href="menu.html">Menu</a></li>
+          <li class="nav-item"><a href="gallery.html">Gallery</a></li>
+          <li class="nav-item"><a href="location_n_contact.html">Location & Contact</a></li>
         </ul>
       </nav>
     </header>
 
-    <h2 id="main"></h2>
-    <div>
-      <h3>What is Bubble Tea?</h3>
-      <p>Bubble tea is a drink with tapioca pearls in the base of milk tea, tea or slush originally from Taiwan, China. The name of “bubble tea” is inspired by the bubbly foam that forms on the top of the drink after shaking. Tapioca, aka “bubble”, “boba”, or “pearl”, is made from the cassava root, sweet potato, and brown sugar, which is chewy and lightly sweet. You can put it in any drink you want.</p>
-    </div>
-    <div>
-      <h3>Who is Tea Ninja?</h3>
-      <p>Tea Ninja is a typical ABC (American-Born-Chinese), born in 2016 in Chicago.</p>
-      <p>He is an American Hippie who knows both Chinese “Cha” (Tea) and Japanese “Ren” (Jutsu).</p>
-      <p>He is a crystallization of ancient Eastern and modern Western cultures.</p>
-    </div>
-    <div>
-      <h3>What is Tea Ninja Bubble Tea?</h3>
-      <p>A Tea Ninja bubble tea is not limited to a cup of tea but a lifestyle.</p>
-      <div class="flip-card">
-        <div class="flip-card-front">
-          FRESH
-          <img src="images/teaninja_drink_brown_sugar_creme_brulee.jpg" alt="brown sugar creme brulee">
+    <main role="main" class="about-container">
+      <h1 class = "slogan">
+        The First Rule of Being a Ninja is Drinking Some Tea …
+      </h1>
+
+      <div id="intro-1" class="intro">
+        <h3>What is Bubble Tea?</h3>
+        <p>Bubble tea is a drink with tapioca pearls in the base of milk tea, tea or slush originally from Taiwan, China. The name of “bubble tea” is inspired by the bubbly foam that forms on the top of the drink after shaking. Tapioca, aka “bubble”, “boba”, or “pearl”, is made from the cassava root, sweet potato, and brown sugar, which is chewy and lightly sweet. You can put it in any drink you want.</p>
+      </div>
+      <div id="intro-2" class="intro">
+        <h3>Who is Tea Ninja?</h3>
+        <p>Tea Ninja is a typical ABC (American-Born-Chinese), born in 2016 in Chicago.</p><br>
+        <p>He is an American Hippie who knows both Chinese “Cha” (Tea) and Japanese “Ren” (Jutsu).</p><br>
+        <p>He is a crystallization of ancient Eastern and modern Western cultures.</p>
+      </div>
+      <div id="intro-3" class="intro">
+        <h3>What is Tea Ninja Bubble Tea?</h3>
+        <p>A Tea Ninja bubble tea is not limited to a cup of tea but a lifestyle.</p><br>
+<div class="flip-card">
+        <div class="flip-card-1">
+          <div class="flip-card-inner-1">
+            <div class="flip-card-front-1">
+              <p>FRESH</p>
+
+              <!-- <img src="images/teaninja_drink_brown_sugar_creme_brulee.jpg" alt="brown sugar creme brulee"> -->
+            </div>
+            <div class="flip-card-back-1">
+              <p>We keep our bubble bouncy and brew our tea continually.</p>
+            </div>
+          </div>
         </div>
-        <div class="flip-card-back">
-          <p>We keep our bubble bouncy and brew our tea continually.</p>
+        <div class="flip-card-2">
+          <div class="flip-card-inner-2">
+            <div class="flip-card-front-2">
+              <p>HEALTHY</p>
+
+              <!-- <img src="images/teaninja_drink_brown_sugar_milk.jpg" alt="brown sugar milk"> -->
+            </div>
+            <div class="flip-card-back-2">
+              <p>We use atural tapioca, gluten and gelatin free.</p>
+              <p>Your choice of lactose free milk or non-dairy milk tea.</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card-3">
+          <div class="flip-card-inner-3">
+            <div class="flip-card-front-3">
+              <p>TASTY</p>
+
+              <!-- <img src="images/teaninja_drink_chocolate_milk_tea.jpg" alt="chocolate milk tea"> -->
+            </div>
+            <div class="flip-card-back-3">
+              <p>Our drinks are more than just aesthetic. They are handmade and delicious.</p>
+            </div>
+          </div>
         </div>
       </div>
+</div>
+    </main>
 
-      <div class="flip-card">
-        <div class="flip-card-front">
-          HEALTHY
-          <img src="images/teaninja_drink_brown_sugar_milk.jpg" alt="brown sugar milk">
-        </div>
-        <div class="flip-card-back">
-          <p>We use atural tapioca, gluten and gelatin free.</p>
-          <p>Your choice of lactose free milk or non-dairy milk tea.</p>
-        </div>
-      </div>
-
-      <div class="flip-card">
-        <div class="flip-card-front">
-          TASTY
-          <img src="images/teaninja_drink_chocolate_milk_tea.jpg" alt="chocolate milk tea">
-        </div>
-        <div class="flip-card-back">
-          <p>Our drinks are more than just aesthetic. They are handmade and delicious.</p>
-        </div>
-      </div>
-
-    </div>
-
-    <footer>
+    <footer role="followus">
       Follow us on
       <a href="https://www.facebook.com/teaninjausa">
-        <i class="fab fa-facebook-square">Facebook </i>
+        <i class="fab fa-facebook-square" aria-label="facebook">Facebook</i>
       </a>
       <a href="https://www.instagram.com/teaninja_annarbor/?hl=en">
-        <i class="fab fa-instagram">Instagram </i>
+        <i class="fab fa-instagram" aria-label="instagram">Instagram</i>
       </a>
 
       <p>This website is designed and coded by Jing Cao.</p>
