--- a/location_n_contact.html
+++ b/location_n_contact.html
@@ -5,82 +5,88 @@
     <title>Location&Contact - Tea Ninja</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/mystyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Josefin+Sans|Rock+Salt&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c15271769.js" crossorigin="anonymous"></script>
   </head>
+
   <body>
-    <div class="skip"><a href="#main">Skip to Main Content</a></div>
-    <header>
-      <h1>
+    <div class="skip"><a href="#location-main">Skip to Main Content</a></div>
+    <header role="banner">
+
+      <nav class="nav" role="navigation">
         <a href="index.html">
-          <img src="images/teaninja_logo_plain.jpg" alt="main logo">
+          <img src="images/teaninja_logo_vertical_1.png" alt="main logo" id="logo">
         </a>
-      </h1>
-      <p class = "slogan">The First Rule of Being a Ninja is Drinking Some Tea…</p>
-      <nav class="nav">
-        <ul>
-          <li><a href="index.html">About</a></li><!--
-          --><li><a href="menu.html">Menu</a></li><!--
-          --><li><a href="gallery.html">Gallery</a></li><!--
-          --><li><a href="location_n_contact.html">Location & Contact</a></li>
+        <ul class="nav-links">
+          <li class="nav-item"><a href="index.html">About</a></li>
+          <li class="nav-item"><a href="menu.html">Menu</a></li>
+          <li class="nav-item"><a href="gallery.html">Gallery</a></li>
+          <li class="nav-item active-page"><a href="location_n_contact.html">Location & Contact</a></li>
         </ul>
       </nav>
+
     </header>
 
-    <div class="">
-      <div class="location">
-        <h2 id="main">Location</h2>
-        <p>Address: 535 E Liberty St., Ann Arbor, MI 48104</p>
-        <a href="https://goo.gl/maps/Q31pe2j8TfuJipN87" class="open">Open in Google Map</a>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.953814457187!2d-83.74422518507302!3d42.27950924817827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae3f713b3723%3A0x7544071ca919ae5b!2s535%20E%20Liberty%20St%2C%20Ann%20Arbor%2C%20MI%2048104!5e0!3m2!1sen!2sus!4v1571106348059!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-      </div>
+    <main role="main" class="lc-container">
+      <h1 class = "slogan">
+        The First Rule of Being a Ninja is Drinking Some Tea …
+      </h1>
 
-      <div class="hours">
-        <h2>Hour</h2>
-        <p>Monday-Saturday: 11:00am-11:00pm</p>
-        <p>Sunday: 11:00am-9:00pm</p>
-      </div>
+        <div class="location" id="location-main">
+          <h2 id="main">Location</h2><br>
+          <p>Address: 535 E Liberty St., Ann Arbor, MI 48104</p><br>
+          <a href="https://goo.gl/maps/Q31pe2j8TfuJipN87" class="open">Open in Google Map</a>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.953814457187!2d-83.74422518507302!3d42.27950924817827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae3f713b3723%3A0x7544071ca919ae5b!2s535%20E%20Liberty%20St%2C%20Ann%20Arbor%2C%20MI%2048104!5e0!3m2!1sen!2sus!4v1571106348059!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
 
-      <div class="contact">
-        <form class="form-horizontal" method="post">
-            <fieldset>
-                <legend class="form-header"><h1>Contact us</h1></legend>
+        <div class="hours">
+          <h2>Hour</h2><br>
+          <p>Monday-Saturday: 11:00am-11:00pm</p>
+          <p>Sunday: 11:00am-9:00pm</p>
+        </div>
 
-                <div class="form-group">
-                  <label for="name">Full Name
-                        <input id="name" name="name" type="text" placeholder="First Name" class="form-control" aria-label="this is name textbox">
-                  </label>
-                </div>
+        <div class="contact">
+          <form class="form-horizontal" method="POST" action="https://formspree.io/xvopvgoz">
+              <fieldset>
+                  <legend class="form-header"><h2>Contact us</h2><br></legend>
 
-                <div class="form-group">
-
-                    <label>Email Address
-                        <input aria-label="this is email textbox" id="email" name="email" type="text" placeholder="Email Address" class="form-control">
+                  <div class="form-group">
+                    <label for="name">Full Name
+                          <input id="name" name="name" required type="text" placeholder="Full Name" class="form-control" aria-label="this is name textbox">
                     </label>
-                </div>
+                  </div>
 
-                <div class="form-group">
-                    <label>Message
-                        <textarea aria-label="this is message textbox" class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you as soon as possible."></textarea>
-                    </label>
-                </div>
+                  <div class="form-group">
 
-                <div class="form-group">
-                    <div>
-                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                    </div>
-                </div>
-            </fieldset>
-        </form>
-      </div>
-    </div>
+                      <label>Email Address
+                          <input aria-label="this is email textbox" required id="email" name="email" type="text" placeholder="Email Address" class="form-control">
+                      </label>
+                  </div>
 
-    <footer>
+                  <div class="form-group">
+                      <label>Message
+                          <textarea aria-label="this is message textbox" required class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you as soon as possible."></textarea>
+                      </label>
+                  </div>
+
+                  <div class="form-group">
+                      <div>
+                          <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                      </div>
+                  </div>
+              </fieldset>
+          </form>
+        </div>
+
+    </main>
+
+    <footer role="followus">
       Follow us on
       <a href="https://www.facebook.com/teaninjausa">
-        <i class="fab fa-facebook-square">Facebook </i>
+        <i class="fab fa-facebook-square" aria-label="facebook">Facebook </i>
       </a>
       <a href="https://www.instagram.com/teaninja_annarbor/?hl=en">
-        <i class="fab fa-instagram">Instagram </i>
+        <i class="fab fa-instagram" aria-label="instagram">Instagram </i>
       </a>
 
       <p>This website is designed and coded by Jing Cao.</p>
