--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,8 @@
     <title>Gallery - Tea Ninja</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/mystyle.css">
-    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Josefin+Sans|Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c15271769.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -65,7 +66,7 @@
 
     </main>
 
-    <footer role="followus">
+    <footer role="contentinfo">
       Follow us on
       <a href="https://www.facebook.com/teaninjausa">
         <i class="fab fa-facebook-square" aria-label="facebook">Facebook </i>
