--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Tea Ninja</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/mystyle.css">
-    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Josefin+Sans|Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c15271769.js" crossorigin="anonymous"></script>
   </head>
 
@@ -30,7 +31,9 @@
       <h1 class = "slogan">
         The First Rule of Being a Ninja is Drinking Some Tea …
       </h1>
+      <div class="ad">
 
+      </div>
       <div id="intro-1" class="intro">
         <h3>What is Bubble Tea?</h3>
         <p>Bubble tea is a drink with tapioca pearls in the base of milk tea, tea or slush originally from Taiwan, China. The name of “bubble tea” is inspired by the bubbly foam that forms on the top of the drink after shaking. Tapioca, aka “bubble”, “boba”, or “pearl”, is made from the cassava root, sweet potato, and brown sugar, which is chewy and lightly sweet. You can put it in any drink you want.</p>
@@ -86,7 +89,7 @@
 </div>
     </main>
 
-    <footer role="followus">
+    <footer role="contentinfo">
       Follow us on
       <a href="https://www.facebook.com/teaninjausa">
         <i class="fab fa-facebook-square" aria-label="facebook">Facebook</i>
