--- a/location_n_contact.html
+++ b/location_n_contact.html
@@ -5,7 +5,8 @@
     <title>Location&Contact - Tea Ninja</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/mystyle.css">
-    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Josefin+Sans|Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c15271769.js" crossorigin="anonymous"></script>
   </head>
 
@@ -36,19 +37,19 @@
           <h2 id="main">Location</h2><br>
           <p>Address: 535 E Liberty St., Ann Arbor, MI 48104</p><br>
           <a href="https://goo.gl/maps/Q31pe2j8TfuJipN87" class="open">Open in Google Map</a>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.953814457187!2d-83.74422518507302!3d42.27950924817827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae3f713b3723%3A0x7544071ca919ae5b!2s535%20E%20Liberty%20St%2C%20Ann%20Arbor%2C%20MI%2048104!5e0!3m2!1sen!2sus!4v1571106348059!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2951.953814457187!2d-83.74422518507302!3d42.27950924817827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883cae3f713b3723%3A0x7544071ca919ae5b!2s535%20E%20Liberty%20St%2C%20Ann%20Arbor%2C%20MI%2048104!5e0!3m2!1sen!2sus!4v1571106348059!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
         </div>
 
         <div class="hours">
           <h2>Hour</h2><br>
           <p>Monday-Saturday: 11:00am-11:00pm</p>
-          <p>Sunday: 11:00am-9:00pm</p>
+          <p>Sunday: 11:00am-10:00pm</p>
         </div>
 
         <div class="contact">
           <form class="form-horizontal" method="POST" action="https://formspree.io/xvopvgoz">
               <fieldset>
-                  <legend class="form-header"><h2>Contact us</h2><br></legend>
+                  <h2>Contact us</h2><br>
 
                   <div class="form-group">
                     <label for="name">Full Name
@@ -80,7 +81,7 @@
 
     </main>
 
-    <footer role="followus">
+    <footer role="contentinfo">
       Follow us on
       <a href="https://www.facebook.com/teaninjausa">
         <i class="fab fa-facebook-square" aria-label="facebook">Facebook </i>
