--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,8 @@
     <title>Menu - Tea Ninja</title>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/mystyle.css">
-    <!-- <link rel="stylesheet" href="css/menustyle.css"> -->
-    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline|Josefin+Sans|Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c15271769.js" crossorigin="anonymous"></script>
   </head>
 
@@ -34,7 +34,7 @@
       </h1>
       <h2 id="menu-main">Menu</h2>
       <p>Every drink in Tea Ninja is selected with heart.</p><br>
-      <div class="ninja-tricks">
+      <!-- <div class="ninja-tricks">
           <div class="trick invisibility">
             <img src="images/invisibility.png" alt="invisibility gesture">
             <p>&nbsp;Too tired to chew stuff? Choose the same drink without toppings in INVISIBILITY.</p>
@@ -47,7 +47,57 @@
             <img src="images/substitution.png" alt="substitution gesture">
             <p>&nbsp;Want try something different but not that risky? Try something in the SUBSTITUTION.</p>
           </div>
-      </div>
+      </div> -->
+      
+      <img src="images/teaninja_drink_creme_brulee.jpg" alt="creme brulee" class="special" id="creme_brulee">
+      <img src="images/brown_sugar_latte.jpg" alt="brown sugar latte" class="milk-series" id="brown_sugar_latte">
+      <img src="images/red_ninja_milk.jpg" alt="red ninja milk" class="milk-series" id="red_ninja_milk">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="milk-series" id="teaninja_logo_circle_milk">
+      <img src="images/yellow_ninja_milk.jpg" alt="yellow ninja milk" class="milk-series" id="yellow_ninja_milk">
+
+
+      <img src="images/grapefruit_slush.jpg" alt="grapefruit slush" class="special" id="grapefruit_slush">
+      <img src="images/cappuccino_slush.jpg" alt="cappuccino slush" class="slush-series" id="cappuccino_slush">
+      <img src="images/chocolate_banana_slush.jpg" alt="chocolate banana slush" class="slush-series" id="chocolate_banana_slush">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="slush-series" id="teaninja_logo_circle_slush">
+      <div class="color-block-slush"></div>
+      <img src="images/pinacolada_slush.jpg" alt="pinacolada slush" class="special" id="pinacolada_slush">
+      <img src="images/mango_slush.jpg" alt="mango slush" class="slush-series" id="mango_slush">
+      <img src="images/purple_preo.jpg" alt="purple oreo" class="slush-series" id="purple_preo">
+      <div class="color-block-slush-2"></div>
+      <img src="images/strawberry_banana_slush.jpg" alt="strawberry banana slush" class="slush-series" id="strawberry_banana_slush">
+
+      <img src="images/strawberry_lemonjade.jpg" alt="strawberry lemonjade" class="special" id="strawberry_lemonjade">
+      <img src="images/passion_fruit_lemonjade.jpg" alt="passion fruit lemonjade" class="fruit-series" id="passion_fruit_lemonjade">
+      <img src="images/lychee_oolong.jpg" alt="lychee oolong" class="fruit-series" id="lychee_oolong">
+      <img src="images/peach_oolong.jpg" alt="peach oolong" class="fruit-series" id="peach_oolong">
+      <div class="color-block-fruit"></div>
+      <img src="images/peach_ice_jelly.jpg" alt="peach ice jelly" class="special" id="peach_ice_jelly">
+      <img src="images/passion_fruit_qq.jpg" alt="passion fruit qq" class="fruit-series" id="passion_fruit_qq">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="fruit-series" id="teaninja_logo_circle_fruit">
+      <img src="images/lychee_qq.jpg" alt="lychee qq" class="fruit-series" id="lychee_qq">
+      <img src="images/rose_strawberry_tea.jpg" alt="rose strawberry tea" class="fruit-series" id="rose_strawberry_tea">
+
+
+      <img src="images/3q_milk_tea.jpg" alt="three q milk tea" class="special" id="three_q_milk_tea">
+      <img src="images/chocolate_oreo_milk_tea.jpg" alt="chocolate oreo milk tea" class="milktea-series" id="chocolate_oreo_milk_tea">
+      <img src="images/oolong_milk_tea.jpg" alt="oolong milk tea" class="milktea-series" id="oolong_milk_tea">
+      <img src="images/pudding_milk_tea.jpg" alt="pudding milk tea" class="milktea-series" id="pudding_milk_tea">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="milktea-series" id="teaninja_logo_circle_milktea">
+      <img src="images/red_bean_matcha.jpg" alt="red bean matcha" class="special" id="red_bean_matcha">
+      <img src="images/caramel_macchiato.jpg" alt="caramel macchiato" class="milktea-series" id="caramel_macchiato">
+      <img src="images/taro_milk_tea.jpg" alt="taro milk tea" class="milktea-series" id="taro_milk_tea">
+      <img src="images/thai_milk_tea.jpg" alt="thai milk tea" class="milktea-series" id="thai_milk_tea">
+      <div class="color-block-milktea"></div>
+
+      <img src="images/roasted_oolong_float.jpg" alt="roasted oolong float" class="special" id="roasted_oolong_float">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="float-series" id="teaninja_logo_circle_float">
+      <img src="images/earl_grey_float.jpg" alt="earl_grey_float" class="float-series" id="earl_grey_float">
+      <img src="images/jasmine_float.jpg" alt="jasmine float" class="float-series" id="jasmine_float">
+      <div class="color-block-float"></div>
+
+
+
 
         <div class="menu-small milk-tea-small">
           <p>NINJA MILK TEA</p>
@@ -111,345 +161,7 @@
         </div>
 
 
-      <table class="milk-tea ">
-        <caption></caption>
-        <thead>
-          <tr>
-            <th scope="col" class="colhead">NINJA MILK TEA</th>
-            <th scope="col" class="colhead invisibility">INVISIBILITY</th>
-            <th scope="col" class="colhead replication">REPLICATION</th>
-            <th scope="col" class="colhead substitution">SUBSTITUTION</th>
-          </tr>
-        </thead>
-        <tbody>
-         <tr>
-           <th scope="row" class="rowhead">Ninja Milk Black Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Ninja Milk Green Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Red Bean Matcha</th>
-           <td class="invisibility">Matcha Milk Tea</td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Pudding Milk Tea</th>
-           <td class="invisibility">Ninja Milk Black Tea</td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Coconut Milk Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Thai Milk Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Taro Milk Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Rose Milk Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Honeydew Milk Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Caramel Macchiato</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Chocolate Oreo Milk Tea</th>
-           <td class="invisibility">Chocolate Milk Tea</td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Chocolate Milk Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-        </tbody>
-      </table>
 
-      <table class="fruit-tea">
-        <caption></caption>
-        <thead>
-          <tr>
-            <th scope="col" class="colhead">NINJA FRUIT TEA</th>
-            <th scope="col" class="colhead invisibility">INVISIBILITY</th>
-            <th scope="col" class="colhead replication">REPLICATION</th>
-            <th scope="col" class="colhead substitution">SUBSTITUTION</th>
-          </tr>
-        </thead>
-        <tbody>
-         <tr>
-           <th scope="row" class="rowhead">Mango Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Jasmine Honey</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Lychee QQ</th>
-           <td class="invisibility">Lychee Green Tea</td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Passion Fruit QQ</th>
-           <td class="invisibility">Passion Fruit Green Tea</td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Rose Strawberry</th>
-           <td class="invisibility"></td>
-           <td class="replication">Strawberry Green Tea</td>
-           <td class="substitution">Rose Green Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Peach Ice Jelly</th>
-           <td class="invisibility">Peach Green Tea</td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Passion Fruit Lemon-Jade</th>
-           <td class="invisibility"></td>
-           <td class="replication">Strawberry Lemon-Jade</td>
-           <td class="substitution">Passion Fruit Green Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Strawberry Lemon-Jade</th>
-           <td class="invisibility"></td>
-           <td class="replication">Passion Fruit Lemon-Jade</td>
-           <td class="substitution">Strawberry Green Tea</td>
-         </tr>
-        </tbody>
-      </table>
-
-      <table class="ninja-dairy">
-        <caption></caption>
-        <thead>
-          <tr>
-            <th scope="col" class="colhead">NINJA DAIRY</th>
-            <th scope="col" class="colhead invisibility">INVISIBILITY</th>
-            <th scope="col" class="colhead replication">REPLICATION</th>
-            <th scope="col" class="colhead substitution">SUBSTITUTION</th>
-          </tr>
-        </thead>
-        <tbody>
-         <tr>
-           <th scope="row" class="rowhead">Earl Grey Crème</th>
-           <td class="invisibility">Earl Grey Black Tea</td>
-           <td class="replication">Ninja Milk Black Tea</td>
-           <td class="substitution">Jasmine/Oolong Crème</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Jasmine Crème</th>
-           <td class="invisibility">Jasmine Green Tea</td>
-           <td class="replication">Ninja Milk Green Tea</td>
-           <td class="substitution">Earl Grey/Oolong Crème</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Brown Sugar Latte</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Ninja Yellow Milk</th>
-           <td class="invisibility"></td>
-           <td class="replication">Ninja Red Milk</td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Ninja Red Milk</th>
-           <td class="invisibility"></td>
-           <td class="replication">Ninja Yellow Milk</td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Oreo Crème Brûlée</th>
-           <td class="invisibility"></td>
-           <td class="replication">Brown Sugar Crème Brûlée</td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Brown Sugar Crème Brûlée</th>
-           <td class="invisibility">Brown Sugar Latte</td>
-           <td class="replication">Oreo Crème Brûlée</td>
-           <td class="substitution"></td>
-         </tr>
-        </tbody>
-      </table>
-
-      <table class="ninja-oolong">
-        <caption></caption>
-        <thead>
-          <tr>
-            <th scope="col" class="colhead">NINJA OOLONG</th>
-            <th scope="col" class="colhead invisibility">INVISIBILITY</th>
-            <th scope="col" class="colhead replication">REPLICATION</th>
-            <th scope="col" class="colhead substitution">SUBSTITUTION</th>
-          </tr>
-        </thead>
-        <tbody>
-         <tr>
-           <th scope="row" class="rowhead">Oolong Milk Tea</th>
-           <td class="invisibility"></td>
-           <td class="replication">Oolong Crème</td>
-           <td class="substitution">Ninja Milk Black Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Peach Oolong</th>
-           <td class="invisibility"></td>
-           <td class="replication">Lychee Oolong</td>
-           <td class="substitution">Peach Green Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Lychee Oolong</th>
-           <td class="invisibility"></td>
-           <td class="replication">Peach Oolong</td>
-           <td class="substitution">Lychee Green Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Oolong Crème</th>
-           <td class="invisibility">Oolong Tea</td>
-           <td class="replication">Oolong Milk Tea</td>
-           <td class="substitution">Earl Grey/Jasmine Crème</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Rose Oolong</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Rose Green Tea</td>
-         </tr>
-        </tbody>
-      </table>
-
-      <table class="slush">
-        <caption></caption>
-        <thead>
-          <tr>
-            <th scope="col" class="colhead">NINJA SLUSH</th>
-            <th scope="col" class="colhead invisibility">INVISIBILITY</th>
-            <th scope="col" class="colhead replication">REPLICATION</th>
-            <th scope="col" class="colhead substitution">SUBSTITUTION</th>
-          </tr>
-        </thead>
-        <tbody>
-         <tr>
-           <th scope="row" class="rowhead">Pineapple Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Pineapple Green Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Lychee Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Lychee Green Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Mango Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Mango Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Strawberry Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Strawberry Green Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Grapefruit Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Cappuccino Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Caramel Macchiato</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Japanese Matcha Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Matcha Milk Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Taro Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Taro Milk Tea</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Piña Colada Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Pineapple Slush</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Strawberry Banana Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Chocolate Banana Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Chocolate Oreo Slush</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Chocolate Oreo Slush</th>
-           <td class="invisibility"></td>
-           <td class="replication"></td>
-           <td class="substitution">Chocolate Banana Slush</td>
-         </tr>
-         <tr>
-           <th scope="row" class="rowhead">Purple Oreo Slush</th>
-           <td class="invisibility">Taro Slush</td>
-           <td class="replication"></td>
-           <td class="substitution"></td>
-         </tr>
-        </tbody>
-      </table>
 
 
       <div class="toppings">
@@ -468,7 +180,7 @@
       </div>
     </main>
 
-    <footer role="followus">
+    <footer role="contentinfo">
       Follow us on
       <a href="https://www.facebook.com/teaninjausa">
         <i class="fab fa-facebook-square" aria-label="facebook">Facebook </i>
