--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,16 @@
     <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c15271769.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DLM0X97FEC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DLM0X97FEC');
+    </script>
+
   </head>
 
   <body>
@@ -48,7 +58,7 @@
             <p>&nbsp;Want try something different but not that risky? Try something in the SUBSTITUTION.</p>
           </div>
       </div> -->
-      
+
       <img src="images/teaninja_drink_creme_brulee.jpg" alt="creme brulee" class="special" id="creme_brulee">
       <img src="images/brown_sugar_latte.jpg" alt="brown sugar latte" class="milk-series" id="brown_sugar_latte">
       <img src="images/red_ninja_milk.jpg" alt="red ninja milk" class="milk-series" id="red_ninja_milk">
